--- a/01_parroting-bot/package.json
+++ b/01_parroting-bot/package.json
@@ -9,6 +9,8 @@
   "author": "Sumihiro Kagawa",
   "license": "MIT",
   "dependencies": {
+    "@line/bot-sdk": "^8.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
