--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.fontSize": 20
+  "editor.fontSize": 20,
+  "terminal.integrated.fontSize": 20
 }
