--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,11 @@
     // Configure properties specific to VS Code.
     "vscode": {
       // Add the IDs of extensions you want installed when the container is created.
-      "extensions": ["dbaeumer.vscode-eslint", "oderwat.indent-rainbow"]
+      "extensions": [
+		"dbaeumer.vscode-eslint",
+		"oderwat.indent-rainbow",
+		"esbenp.prettier-vscode"
+	]
     }
   },
   "portsAttributes": {
