--- a/02_bot_on_aws/package.json
+++ b/02_bot_on_aws/package.json
@@ -14,7 +14,10 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "@line/bot-sdk": "^8.0.2",
+    "@vendia/serverless-express": "^4.10.4",
     "aws-cdk-lib": "2.110.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "express": "^4.18.2"
   }
 }
