--- a/02_bot_on_aws/package.json
+++ b/02_bot_on_aws/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "aws-cdk": "2.110.0",
+    "esbuild": "^0.19.7",
     "jest": "^29.7.0"
   },
   "dependencies": {
