--- a/02_bot-on-aws/package.json
+++ b/02_bot-on-aws/package.json
@@ -15,6 +15,8 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@line/bot-sdk": "^8.0.2",
     "@vendia/serverless-express": "^4.10.4",
     "aws-cdk-lib": "2.110.0",
