--- a/02_bot-on-aws/package.json
+++ b/02_bot-on-aws/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/client-s3": "^3.456.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
+    "@aws-sdk/lib-storage": "^3.456.0",
     "@line/bot-sdk": "^8.0.2",
     "@vendia/serverless-express": "^4.10.4",
     "aws-cdk-lib": "2.110.0",
+    "axios": "^1.6.2",
     "constructs": "^10.0.0",
     "express": "^4.18.2"
   }
