--- a/02_bot-on-aws/.gitignore
+++ b/02_bot-on-aws/.gitignore
@@ -3,3 +3,12 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# env
+.env
+.env.*
+!.env.example
+!.env.develop
+!.env.production
+
+/tmp
