--- a/02_bot-on-aws/package.json
+++ b/02_bot-on-aws/package.json
@@ -25,6 +25,7 @@
     "aws-cdk-lib": "2.110.0",
     "axios": "^1.6.2",
     "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
